<resources>
    <string name="app_name">DolanYogya</string>
    <string name="login">Masuk</string>
    <string name="username_hint">Masukkan Username</string>
    <string name="password_hint">Masukkan Password</string>
    <string name="logo_description">Logo of Dolan Jogja</string>
    <string name="go_to_signup">Belum punya akun?</string>
    <string name="sign_up">Daftar</string>
    <string name="email_or_phone_hint">Masukkan Email atau Nomor HP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>